# ai-analytics-delivery-orchestrator

./: .gitignore  README.md  config.py  main.py  pyproject.toml
orchestrator/: config.py  feedback.py  graph.py  state.py
orchestrator/evaluation/: golden_cases.py  rubric.py
orchestrator/nodes/: dashboard.py  etl.py  human_review.py  model.py  profiling.py  qa.py  review.py  scoping.py
orchestrator/prompts/: dashboard.txt  review.txt  scoping.txt
tests/: test_etl.py  test_nodes.py  test_profiling.py  test_state.py
