[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[project]
name = "ai-analytics-delivery-orchestrator"
version = "0.1.0"
description = "A LangGraph state machine that turns a business brief + CSV into a reproducible analytics delivery."
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pandas>=2.2.0",
    # ydata-profiling removed: no stable support for Python 3.12+ via Store installs.
    # Profiling implemented directly with pandas in nodes/profiling.py —
    # same outputs (null rates, distributions, correlations, warnings), zero fragile deps.
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "streamlit>=1.38.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "rich>=13.8.0",
    "setuptools>=70.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]